--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,12 +8,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="red">#FF0000</color>
     <color name="pink">#DA00FF</color>
     <color name="light_pink">#F5B8FF</color>
     <color name="green">#00FF00</color>
     <color name="darkyello">#FFC107</color>
-    <color name="yellow">#FFC107</color>
     <color name="darkred">#A60000</color>
     <color name="wintergreen">#679289</color>
     <color name="Darkgreen">#E41B8E00</color>
@@ -21,5 +19,10 @@
     <color name="lighBlue">#3F51B5</color>
     <color name="divider_grey">#9C9C9C</color>
     <color name="background"> #FDEEDC </color>
+
+    <!-- Stock Management -->
+
+    <color name="yellow">#FFBA08</color>
+    <color name="red">#9D0208</color>
 
 </resources>
